# Gemeni

./: .gitattributes  Dockerfile  Procfile  bot.py  bot2.py  bot3.py  bot4.py  fixer.sh  pyproject.toml  railway.json  requirements.txt
