[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scalper-bot"
version = "1.0.0"
dependencies = [
    "ccxt>=4.1.66",
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "pandas-ta>=0.3.14b0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.2",
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=20.6",
    "schedule>=1.2.0"
]

[project.optional-dependencies]
ml = [
    "tensorflow>=2.14.0",
    "keras>=3.0.0"
]

[tool.pdm]
package-dir = "src"
